0.02
 - Remove diacritics from author name in Makefile.PL.

0.01 2014-09-02T00:58:08+02:00
 - First version.