@@ -1,5 +1,6 @@
 0.02
  - Remove diacritics from author name in Makefile.PL.
+ - Update Module::Install to 1.16 version.
 
 0.01 2014-09-02T00:58:08+02:00
  - First version.
